--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -15,4 +15,15 @@
 
     <%- include('partials/footer') %>
   </body>
+  <!-- <script>
+    document.getElementById('dashboard-view-nav').href =
+      '/user/dashboard?userId=' + userId;
+    document.getElementById('did-view-nav').href = '/did/view?userId=' + userId;
+    document.getElementById('credentials-view-nav').href =
+      '/credentials/view?userId=' + userId;
+    document.getElementById('reputation-view-nav').href =
+      '/reputation/view?userId=' + userId;
+    document.getElementById('verification-request-nav').href =
+      '/verification/request?userId=' + userId;
+  </script> -->
 </html>
