--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,10 +1,10 @@
-<nav>
+<!-- <nav>
   <ul>
-    <li><a href="/user/dashboard">Dashboard</a></li>
-    <li><a href="/did/view">View your DID</a></li>
-    <li><a href="/reputation/view">View your Reputation</a></li>
-    <li><a href="/verification/request">Documents</a></li>
-    <li><a href="/credentials/view">Profile</a></li>
+    <li><a id="dashboard-view-nav">Dashboard</a></li>
+    <li><a id="did-view-nav">View your DID</a></li>
+    <li><a id="reputation-view-nav">View your Reputation</a></li>
+    <li><a id="verification-view-nav">Documents</a></li>
+    <li><a id="credentials-view-nav">Profile</a></li>
     <li><a href="/auth/logout">Logout</a></li>
   </ul>
-</nav>
+</nav> -->
